[package]
name = "zobie_bip32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = {package = "bip39", version = "2.0.0", features = ["rand", "zeroize"]}
bs58 = "0.5.0"
crypto-bigint = "0.5.3"
elliptic-curve = {package = "elliptic-curve", version = "0.13.6", features = ["arithmetic"]}
hex-literal = "0.4.1"
hmac = "0.12.1"
k256 = "0.13.1"
ripemd = "0.1.3"
sha2 = "0.10.8"
